# cream-client-api-c

./: CMakeLists.txt
cmake_modules/: CMakeLists.txt  FindGLiteGridsite.cmake
interface/: CMakeLists.txt
interface/glite/ce/cream-client-api-c/: AbsCreamProxy.h  AbsJobInfoList.h  AuthenticationException.h  AuthorizationException.h  BaseException.h  CEUrl.h  Command.h  ConfigurationManager.h  ConnectionTimeoutException.h  CreamProxyFactory.h  CreamProxy_Impl.h  DelegationException.h  EventWrapper.h  ExceptionFactory.h  GenericException.h  GridProxyDelegationException.h  InternalException.h  InvalidArgumentException.h  JobCommandWrapper.h  JobDescriptionWrapper.h  JobFilterWrapper.h  JobIdWrapper.h  JobInfo.h  JobInfoList.h  JobInfoObject.h  JobInfoWrapper.h  JobPropertyWrapper.h  JobStatusInvalidException.h  JobStatusList.h  JobStatusObject.h  JobStatusWrapper.h  JobSubmissionDisabledException.h  JobUnknownException.h  NoSuitableResourceException.h  NumericException.h  OperationNotSupportedException.h  ResultWrapper.h  ServiceInfoWrapper.h  Status.h  VOMSWrapper.h  (+12 more)
interface/glite/ce/es-client-api-c/: AbstractCall.h  ActivityCreationResponse.h  ActivityDescription.h  ActivityIdentification.h  ActivityStatus.h  Application.h  CallFactory.h  CancelActivityCall.h  ComputingActivity.h  ComputingActivityAssociations.h  CoprocessorType.h  CreateActivities.h  CreateActivitiesResponse.h  CreateActivityCall.h  CreateActivityDescriptionFromXML.h  DataStaging.h  DeserializeActivityIdentification.h  DeserializeApplication.h  DeserializeApplicationEnvironment.h  DeserializeApplicationExecutable.h  DeserializeApplicationExpirationTime.h  DeserializeApplicationInOutErr.h  DeserializeApplicationNotification.h  DeserializeApplicationPrePostExecutable.h  DeserializeApplicationRemoteLogging.h  DeserializeApplicationWipeTime.h  DeserializeDataStaging.h  DeserializeInputFile.h  DeserializeInputFileSource.h  DeserializeOutputFile.h  DeserializeOutputFileTarget.h  DeserializeResources.h  DeserializeResourcesOperatingSystem.h  DeserializeResourcesParallelEnvironment.h  DeserializeResourcesRuntimeEnvironment.h  DeserializeResourcesSlotRequirement.h  ExecutableType.h  Extension.h  ExtensionsType.h  GetActivityInfoCall.h  (+60 more)
project/: glite-ce-cream-client-api-c.spec.in
src/: AbsCreamProxy.cpp  CEUrl.cpp  CMakeLists.txt  Command.cpp  ConfigurationManager.cpp  CreamProxy_AcceptNewJobSubmissions.cpp  CreamProxy_Cancel.cpp  CreamProxy_CheckJS.cpp  CreamProxy_Delegate.cpp  CreamProxy_DisableJS.cpp  CreamProxy_EnableJS.cpp  CreamProxy_GetCEMonURL.cpp  CreamProxy_Info.cpp  CreamProxy_Lease.cpp  CreamProxy_LeaseInfo.cpp  CreamProxy_List.cpp  CreamProxy_ProxyRenew.cpp  CreamProxy_Purge.cpp  CreamProxy_QueryEvent.cpp  CreamProxy_Register.cpp  CreamProxy_Resume.cpp  CreamProxy_ServiceInfo.cpp  CreamProxy_Start.cpp  CreamProxy_Status.cpp  CreamProxy_Suspend.cpp  EventWrapper.cpp  ExceptionFactory.cpp  JobCommandWrapper.cpp  JobDescriptionWrapper.cpp  JobFilterWrapper.cpp  JobIdWrapper.cpp  JobInfo.cpp  JobInfoList.cpp  JobInfoWrapper.cpp  JobStatusList.cpp  JobStatusWrapper.cpp  ResultWrapper.cpp  ServiceInfoWrapper.cpp  Status.cpp  VOMSWrapper.cpp  (+6 more)
src/ES/: AbstractCall.cpp  ActivityCreationResponse.cpp  ActivityDescription.cpp  ActivityIdentification.cpp  ActivityStatus.cpp  Application.cpp  CMakeLists.txt  CallFactory.cpp  CancelActivityCall.cpp  ComputingActivity.cpp  ComputingActivityAssociations.cpp  CoprocessorType.cpp  CreateActivities.cpp  CreateActivitiesResponse.cpp  CreateActivityCall.cpp  CreateActivityDescriptionFromXML.cpp  DataStaging.cpp  DeserializeActivityIdentification.cpp  DeserializeApplication.cpp  DeserializeApplicationEnvironment.cpp  DeserializeApplicationExecutable.cpp  DeserializeApplicationExpirationTime.cpp  DeserializeApplicationInOutErr.cpp  DeserializeApplicationNotification.cpp  DeserializeApplicationPrePostExecutable.cpp  DeserializeApplicationRemoteLogging.cpp  DeserializeApplicationWipeTime.cpp  DeserializeDataStaging.cpp  DeserializeInputFile.cpp  DeserializeInputFileSource.cpp  DeserializeOutputFile.cpp  DeserializeOutputFileTarget.cpp  DeserializeResources.cpp  DeserializeResourcesOperatingSystem.cpp  DeserializeResourcesParallelEnvironment.cpp  DeserializeResourcesRuntimeEnvironment.cpp  DeserializeResourcesSlotRequirement.cpp  ExecutableType.cpp  Extension.cpp  ExtensionsType.cpp  (+60 more)
src/ES/pkgconfig/: CMakeLists.txt  es-client-api-c.pc.in
src/pkgconfig/: CMakeLists.txt  cream-client-api-soap.pc.in  cream-client-api-util.pc.in
