#
#  Copyright (c) Members of the EGEE Collaboration. 2010.
#  See http://www.eu-egee.org/partners/ for details on the copyright
#  holders.
#  
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  
#     http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
#  implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#  

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cream-client-api-soap.pc.in
               ${CMAKE_CURRENT_BINARY_DIR}/cream-client-api-soap.pc
               @ONLY)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cream-client-api-util.pc.in
               ${CMAKE_CURRENT_BINARY_DIR}/cream-client-api-util.pc
               @ONLY)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/
        DESTINATION usr/${LIBSUBDIR}/pkgconfig
        FILES_MATCHING PATTERN "*.pc"
        PATTERN "CMakeFiles" EXCLUDE)

